@@ -1,4 +1,4 @@
-<!-- start of $Id: folders.php,v 1.11 2004/06/21 21:20:42 wolruf Exp $ -->
+<!-- start of $Id: folders.php,v 1.10 2004/06/14 11:30:06 goddess_skuld Exp $ -->
 <?php
 
 $renameoldbox = $pop->html_folder_select('renameoldbox', '');
@@ -20,7 +20,7 @@ if (is_array($all_mailboxes)) {
 $select_list = array();
 if (count($big_list) > 1) {
     for ($i = 0; $i < count($big_list); $i++) {
-        array_push($select_list, "\t<option value=\"".$big_list[$i]."\">".$big_list[$i]."</option>\n");
+        array_push($select_list, "\t<OPTION value=\"".$big_list[$i]."\">".$big_list[$i]."</OPTION>\n");
     }
 }
 
@@ -47,7 +47,7 @@ if (count($big_list) > 1) {
                 <tr>
                     <td width="10%"></td>
                     <td align="left" class="prefs" ><input type="radio" name="do" value="subscribe_folder">
-                        <?php echo $html_folder_subscribe ?> <select name="subscribenewbox"> <?php echo join('', $select_list) ?> </select></td>
+                        <?php echo $html_folder_subscribe ?> <SELECT name="subscribenewbox"> <?php echo join('', $select_list) ?> </SELECT></td>
                 </tr>
                 <tr>
                     <td width="10%"></td>
@@ -97,4 +97,4 @@ if (count($big_list) > 1) {
           echo "\n    </td>\n</tr>";
     ?>
 </table>
-<!-- end of $Id: folders.php,v 1.11 2004/06/21 21:20:42 wolruf Exp $ -->
+<!-- end of $Id: folders.php,v 1.10 2004/06/14 11:30:06 goddess_skuld Exp $ -->
